tests/baselines/reference/ambientExternalModuleInAnotherExternalModule.errors.txt
tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts(5,16): error TS2660: Invalid module name in augmentation, module 'ext' cannot be found.
tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts(6,18): error TS2661: Module augmentation cannot introduce new names in the top level scope.
tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts(10,22): error TS2307: Cannot find module 'ext'.


==== tests/cases/compiler/ambientExternalModuleInAnotherExternalModule.ts (3 errors) ====
    
    class D { }
    export = D;
    
    declare module "ext" {
                   ~~~~~
!!! error TS2660: Invalid module name in augmentation, module 'ext' cannot be found.
        export class C { }
                     ~
!!! error TS2661: Module augmentation cannot introduce new names in the top level scope.
    }
    
    // Cannot resolve this ext module reference
    import ext = require("ext");
                         ~~~~~
!!! error TS2307: Cannot find module 'ext'.
    var x = ext;